# nyt-spelling-bee-solver

./: .gitignore  CLAUDE.md  convert_dic.py  main.py  pyproject.toml  solve.py
.claude/: settings.json
.claude/plans/: initial-project-plan.md
.claude/rules/: code-style.md
tests/: test_convert_dic.py  test_solve.py
wordlists/: en_US_acronyms.txt  en_US_common.txt  en_US_profanity.txt  en_US_proper_nouns.txt
