[project]
name = "nyt-spelling-bee-solver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
solve = "solve:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "spylls>=0.1.7",
]
